--- a/index.html
+++ b/index.html
@@ -118,6 +118,13 @@
     <div class="date">تاريخ: 2025/11/21</div>
     <button onclick="downloadFile('file2.txt')">💾 حل المهمة</button>
   </div>
+  <div class="task" data-id="3">
+    <input type="checkbox">
+    <h2>📌 فيزياء</h2>
+    <p> تمرين 9.10.11 ص 282,تمرين12.13ص283</p>
+    <div class="date">تاريخ: 2025/11/30</div>
+    <button onclick="downloadFile('file2.txt')">💾 حل المهمة</button>
+  </div>
 </div>
 
 </div>
@@ -188,6 +195,7 @@ dailyNotification();
 
 </body>
 </html>
+
 
 
 
