--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <h2>📌 فيزياء</h2>
     <p> تمرين 9.10.11 ص 282,تمرين12.13ص283</p>
     <div class="date">تاريخ: 2025/11/30</div>
-    <button onclick="downloadFile('file2.txt')">💾 حل المهمة</button>
+    <button onclick="downloadFile('f.pdf')">💾 حل المهمة</button>
   </div>
 </div>
 
@@ -195,6 +195,7 @@ dailyNotification();
 
 </body>
 </html>
+
 
 
 
