--- a/index.html
+++ b/index.html
@@ -123,6 +123,13 @@
     <h2>📌 فيزياء</h2>
     <p> تمرين 9.10.11 ص 282,تمرين12.13ص283</p>
     <div class="date">تاريخ: 2025/11/30</div>
+    <button onclick="downloadFile('ي.pdf')">💾 حل المهمة</button>
+  </div>
+  <div class="task" data-id="3">
+    <input type="checkbox">
+    <h2>📌 فيزياء</h2>
+    <p> حل مثال</p>
+    <div class="date">تاريخ المراقبة: 2025/11/26 </div>
     <button onclick="downloadFile('f.pdf')">💾 حل المهمة</button>
   </div>
 </div>
@@ -192,6 +199,7 @@ dailyNotification();
 
 </body>
 </html>
+
 
 
 
