--- a/index.html
+++ b/index.html
@@ -125,10 +125,10 @@
     <div class="date">تاريخ: 2025/11/30</div>
     <button onclick="downloadFile('ي.pdf')">💾 حل المهمة</button>
   </div>
-  <div class="task" data-id="3">
+  <div class="task" data-id="4">
     <input type="checkbox">
     <h2>📌 فيزياء</h2>
-    <p> حل مثال</p>
+    <p> حل مثال الأول في الكيمياء</p>
     <div class="date">تاريخ المراقبة: 2025/11/26 </div>
     <button onclick="downloadFile('f.pdf')">💾 حل المهمة</button>
   </div>
@@ -199,6 +199,7 @@ dailyNotification();
 
 </body>
 </html>
+
 
 
 
