--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
     <h2>📌 فيزياء</h2>
     <p> تمرين 9.10.11 ص 282,تمرين12.13ص283</p>
     <div class="date">تاريخ: 2025/11/30</div>
-    <button onclick="downloadFile('ي.pdf')">💾 حل المهمة</button>
+    <button onclick="downloadFile('f2.pdf')">💾 حل المهمة</button>
   </div>
   <div class="task" data-id="4">
     <input type="checkbox">
@@ -197,6 +197,7 @@ dailyNotification();
 
 </body>
 </html>
+
 
 
 
